ci_cd/kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-demo
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: dev.app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-demo
                port:
                  number: 80
  tls:
    - hosts:
        - dev.app.example.com
      secretName: dev-tls-secret
